# cansentinel

./: Cargo.toml  LICENSE  README.md  cansentinel.service
.github/workflows/: ci.yml
CONTROL/: control  postinst  postrm  prerm  rules
src/: config.rs  events.rs  interface.rs  lib.rs  main.rs  restart.rs
src/monitoring/: error_frame.rs  mod.rs  netlink.rs
systemcore/: 99-disable-autorestart.conf
