[package]
name = "cansentinel"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rzblue/cansentinel"

[dependencies]
neli = "0.6.5"
nix = { version = "0.30.1", features = ["net"] }
socketcan = { version = "3.5.0", features = ["async-io"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync", "time", "macros"] }
