[package]
name = "cansentinel"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rzblue/cansentinel"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
neli = "0.6.5"
nix = { version = "0.30.1", features = ["net"] }
# upstream crate has bad behavior when opening netlink socket, use patched version
socketcan = { git = "https://github.com/rzblue/socketcan-rs", branch="netlink-pid-0", features = ["async-io"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync", "time", "macros"] }

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
